added TODO for KF

--- a/app/elements/stube-upload/stube-upload.html
+++ b/app/elements/stube-upload/stube-upload.html
@@ -82,8 +82,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        },
 
       upload: function(){
-        // Yeah man, create the object and upload it!
-//        this.readyforupload = true;
         this.readyforupload = true;
         this.createclip();
       },
@@ -94,6 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             this.metadata.description = this.description;
 
             console.log('ok',this.metadata);
+            // Yeah man - create that contract here now please....
           }
       }
     });
