--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="routing.html">
 
 <!-- Add your elements here -->
-<link rel="import" href="../styles/app-theme.html">
+<link rel="import" href="../styles/golden-goose.html">
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="./stube-item/stube-item.html">
 <link rel="import" href="./stube-player/stube-player.html">
@@ -56,3 +56,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="stube-newplaylist/stube-newplaylist.html">
 <link rel="import" href="stube-user/stube-user.html">
 <link rel="import" href="stube-upload/stube-upload.html">
+<link rel="import" href="stube-likebtn/stube-likebtn.html">
