--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
 
   <!-- build:css styles/main.css -->
+  <link rel="stylesheet" href="styles/golden-goose.css">
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild-->
 
@@ -166,11 +167,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </paper-material>
           </section>
 
-<!--           <section data-route="clip">
+          <section data-route="clip">
             <stube-clip ipfsobject="{{params.hash}}"></stube-clip>
           </section>
 
-          <section data-route="contact">
+         <!--  <section data-route="contact">
             <paper-material elevation="1">
               <h2 class="page-title">Contact</h2>
               <p>This is the contact section</p>
