like function added

--- a/app/elements/stube-item/stube-item.html
+++ b/app/elements/stube-item/stube-item.html
@@ -67,7 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="paper-font-body1">{{description}}</div>
         <div class="actionbuttons">
           <paper-icon-button toggles icon="favorite" active="{{likebutton}}"></paper-icon-button>
-          <stube-likebtn address="{{address}}" clipaddr="{{ipfsobject}}"></stube-likebtn>
+          <stube-likebtn account="{{account}}" web3="{{web3}}"></stube-likebtn>
           <p class="paper-font-body2 gris">{{likes}}</p>
         </div>
       </div>
