--- a/app/index.html
+++ b/app/index.html
@@ -128,8 +128,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-material elevation="1">
               <h1 class="paper-font-headline">Channel Sponnet</h1>
 
-              <stube-item hash="QmTAJAzi8pVvT85242vjVWVySzGxM9jU3cKU4ekr8Zov1M"></stube-item>
-              <stube-item hash="QmPT24oYhupjJ41iaPrL4JC2RnRuRPHu6F4RkteZYh7Dys"></stube-item>
+              <stube-item hash="QmTAJAzi8pVvT85242vjVWVySzGxM9jU3cKU4ekr8Zov1M" web3="{{web3}}" account="{{account}}"></stube-item>
+              <stube-item hash="QmPT24oYhupjJ41iaPrL4JC2RnRuRPHu6F4RkteZYh7Dys" web3="{{web3}}" account="{{account}}"></stube-item>
               <!-- <stube-item hash="QmWFg3yzoaNPY9Kkaoku1kmqGfBZrwCJVqWqJzxfMkPKr4"></stube-item> -->
 
 
